--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-litrs = { version = "0.4.0", default-features = false }
+litrs = "1.0.0"
 naga = { version = "0.19.0", features = ["wgsl-in"] }
 quote = "1.0.28"
 
