--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ proc-macro = true
 
 [dependencies]
 litrs = "1.0.0"
-naga = { version = "0.19.0", features = ["wgsl-in"] }
+naga = { version = "28.0.0", features = ["wgsl-in", "stderr"] }
 quote = "1.0.28"
 
 [dev-dependencies]
